# SKN30-1st-4Team

./: .env.sample  .gitignore  README.md  README_tmp.html  ev_charger_all_clean.csv  main.py  pyproject.toml  sample.py  김도훈_csv_combined.py  김도훈_visual_cc.py
config/: __init__.py  config.py  db_manager.py
docs/: db_architecture.md  planning.md  requirements.md  technical_pecification.md  technical_specification.md
domain/: data_gov_client.py  ev_car_row_col_change.py  ev_charger_api.py  ev_charger_csv_to_db.py  ev_charger_slow_fast_sum.py  ev_csv_file_made.py  ev_schema.py  ev_service.py  load_by_csv.py  load_by_db.py
domain/crawling/: Example.md  ev_or_kr.py  word_cloud.py
domain/crawling/ev_or_kr_csv/: ev_or_kr_2018.csv  ev_or_kr_2019.csv  ev_or_kr_2020.csv  ev_or_kr_2021.csv  ev_or_kr_2022.csv  ev_or_kr_2023.csv  ev_or_kr_2024.csv  ev_or_kr_2025.csv
domain/source/test/: ev_charger_1.csv
domain/source/한국전력공사_지역별 전기차 현황정보/: combined_car_data.csv
domain/source_cleansing/: Example.md  ev_csv_combined_file.py
domain/sql/: 1.CREATE_TABLE.sql
domain/src_clean/: 전기차_등록_현황_광역_통합.csv  전기차_등록_현황_연도별_변환.csv  전기차_충전기_합계_연도별_변환.csv
domain/src_raw/: 201001_202510_지역별_전기차_등록_현황(누적).csv  201001_202510_지역별_전기차_충전기_구축현황(누적).csv  201001_202512_지역별_전기차_등록_현황(누적).xls  ev_car_row_col_change.py  공공데이터_API_명세서.md  전기차_충전기_합계_현황.csv
domain/src_raw/backup/: 201001_202510_지역별_전기차_충전기_구축현황(누적).xls  전기차_18-24_month.csv
web/: section_comparison_chart.py  section_data_table.py  section_insights.py  section_line_chart.py  section_map.py  section_wordcloud.py  sidebar.py  view.py
(+7 files in other folders)
